# template-fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/app/: __init__.py  main.py
tests/: test_app.py
