[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "Onklave project template: Python FastAPI service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]
